GeneWeb version 4.02
--------------------

* GeneWeb server or CGI (gwd)
  - [01 May 01] In personal pages, related persons (godchildren, adoptive
    children, etc) are displayed in their baptism or birth order.
  - [19 Apr 01] Improved the sending of images. Should work better,
    particularly for images sent from a MacIntosh.
  - [11 Apr 01] The Gregorian and Julian calendars did not work for years
    less than 4800 BC. Fixed.

* Templates files (etc/*.txt)
  For programmers...
  - [28 Apr 01] Added ability to use variable "cvar_x" in perso.txt, returning
    the value of the variable x of the base configuration file.

* Setup program (gwsetup)
  - [11 Apr 01] Fixed security hole: if the file only.txt was not
    accessible or corrupted for some reason (it should not but...), the
    gwsetup service became potentially accessible from any outside address
    (but only if people could guess the gwsetup service address). It is
    modified: now, if this file is not accessible, only requests from
    127.0.0.1 (local machine) are accepted.

* GeneWeb data bases Transfer Program (gwtp)
  - [28 Apr 01] Added option -tmout to specify the time after which
    unused logins expire (default is 900s = 15mn).

GeneWeb version 4.01
--------------------

* Installation
  - [18 Mar 01] Fixed bug in Linux rpm package: the 'restart' of
    gwd did not work; it worked only by using 'stop' and 'start'.

* Languages
  - [05 Apr 01] Renamed some languages codes to be in conformance with
    the standard (http://www.oasis-open.org/cover/iso639a.html):
      * Catalan: ct replaced by ca
      * Chinese: cn replaced by zh
      * Danish: dk replaced by da
      * Swedish: se replaced by sv
    But old codes are still working, thanks to an alias language file.
    The code of the new language, Brazilian Portuguese, is pt-br.
  - [14 Mar 01] Added Brazilian Portuguese (Paulo Francisco Sedrez).

* GeneWeb server or CGI (gwd)