@@ -2,6 +2,8 @@ GeneWeb version 4.02
 --------------------
 
 * GeneWeb server or CGI (gwd)
+  - [05 May 01] When creating or modifying a family, warn for children
+    whose sex is undefined.
   - [01 May 01] In personal pages, related persons (godchildren, adoptive
     children, etc) are displayed in their baptism or birth order.
   - [19 Apr 01] Improved the sending of images. Should work better,
